--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,11 @@ github_username:  TarahC
 
 
 # Build settings
-theme: minima
+# theme: minima
+remote_theme: pages-themes/slate@v0.2.0
 plugins:
   - jekyll-feed
-
+  - jekyll-remote-theme
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
