--- a/_config.yml
+++ b/_config.yml
@@ -23,17 +23,16 @@ email: woodford.tarah@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   One Munk's Journey into Cybersecurity
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://tarahc.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: NA
 github_username:  TarahC
 
 
 # Build settings
-# theme: minima
+# theme: jekyll-theme-slate
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
